--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/alliance-11/final-server#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "mongoose": "^6.3.2",
     "nodemon": "^2.0.16"
   }
 }
